Fix apps on mobile

--- a/assets/sass/_apps.scss
+++ b/assets/sass/_apps.scss
@@ -1,16 +1,18 @@
-.slider {
+#apps-page {
+    .slider {
 
-    padding: 0 15px 0 15px;
-    margin-top: 10px;
+        padding: 0 15px 0 15px;
 
-    label {
-        margin-left: -15px;
-    }
+        label {
+            margin-left: -15px;
+            margin-bottom: 18px;
+        }
 
-    .noUi-base {
+        .noUi-base {
 
-        .noUi-connect {
-            background-color: $link-color;
+            .noUi-connect {
+                background-color: $link-color;
+            }
         }
     }
 }
